Resolved Marlins little funny bugs